# PCI

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE.txt  README.md  logs  pyproject.toml  requirements.txt  run.py
src/sra_tool/: audit.py  cli.py  config.py  constants.py  dedup.py  evaluator.py  exporter.py  gui.py  gui.py.bak  gui_strict.py  gui_validated.py  gui_validated.py.bak  harmonizer.py  logging_utils.py  manuscript_tables.py  models.py  openalex_client.py  pipeline.py  pipeline_strict.py  pipeline_validated.py.bak  pipeline_validated1.py  prisma.py  protocol.py  pruebas  quality.py  screening.py  state.py  utils.py  validator.py
src/sra_tool/D:/prueba/test_api_archivos/: README.txt  manifest_test_files.json  openalex_core_test.csv  openalex_exploratory_1_test.csv  openalex_exploratory_2_test.csv  scopus_core_test.csv  scopus_exploratory_1_test.csv  scopus_exploratory_2_test.csv
src/sra_tool/clients/: openalex.py
src/sra_tool/importers/: scopus_csv.py
src/systematic_review_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test_dedup.py  test_harmonizer.py  test_pipeline_integration.py
